Fix T67483: Cannot paste on unit-vector uibut

Reviewers: campbellbarton

Differential Revision: https://developer.blender.org/D6701